--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -49,12 +49,23 @@ jobs:
         run: |
           npm run lint
 
-      # TODO: add supply chain scanning
+      # TODO: add supply chain scanning `npm audit` - SCA software composition analysis
 
       # TODO: add unit testing
 
+    deploy:
       # TODO: add cloudformation linting
 
-      # TODO: add deployment to cloudformation
+      - name: Deploy to AWS CloudFormation
+        uses: aws-actions/aws-cloudformation-github-deploy@v1
+        working-directory: infra
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }
+          AWS_DEFAULT_REGION: eu-west-2
+          AWS_DEFAULT_OUTPUT: json
+        with:
+          name: JujharStack
+          template: my-cloudformation.yaml
 
       - run: echo "🍏 This job's status is ${{ job.status }}."
